reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-content__src__load.rs_line_159_col_5.log

*** crates/tracewake-content/src/load.rs:159:5: replace seed_epistemic_projection -> Result<EpistemicProjection, LoadError> with Ok(Default::default())

*** mutation diff:
--- crates/tracewake-content/src/load.rs
+++ replace seed_epistemic_projection -> Result<EpistemicProjection, LoadError> with Ok(Default::default())
@@ -151,29 +151,17 @@
     }
     scope.ok_or(SerializationError::MissingField("fixture_scope"))
 }
 
 fn seed_epistemic_projection(
     manifest_id: ContentManifestId,
     seed_event_log: &EventLog,
 ) -> Result<EpistemicProjection, LoadError> {
-    let mut projection = EpistemicProjection::new(manifest_id);
-    for event in seed_event_log.events() {
-        if event.stream == EventStream::Epistemic {
-            apply_epistemic_event(&mut projection, event).map_err(|error| {
-                LoadError::EpistemicSeedEvent(format!(
-                    "fixture seed epistemic event {} failed: {error:?}",
-                    event.event_id.as_str()
-                ))
-            })?;
-            projection.record_applied_event(event.event_id.clone());
-        }
-    }
-    Ok(projection)
+    Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
 }
 
 fn seed_event_log(fixture: &FixtureSchema, manifest_id: ContentManifestId) -> EventLog {
     let mut log = EventLog::new();
     let mut sequence = 0_u64;
 
     for belief in &fixture.initial_beliefs {
         let event_id = EventId::new(format!(


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-content v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-content): the file `crates/tracewake-content/src/load.rs` has changed (1781903699.811925472s, 1s after last build at 1781903698.759925471s)
   Compiling tracewake-content v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-content)
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/tests/../../tracewake-content/src/load.rs` has changed (1781903699.811925472s, 1s after last build at 1781903698.759925471s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name negative_fixture_runner --edition=2021 crates/tracewake-core/tests/negative_fixture_runner.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e5757af4d75e274b -C extra-filename=-917eace778bbd9c5 --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps --extern tracewake_core=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps/libtracewake_core-95b4b25dfac705df.rlib`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_content --edition=2021 crates/tracewake-content/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=d243c079ea17582c -C extra-filename=-b18457137da16d86 --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps --extern tracewake_core=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps/libtracewake_core-95b4b25dfac705df.rlib`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name anti_regression_guards --edition=2021 crates/tracewake-core/tests/anti_regression_guards.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=1562fde6eff0478d -C extra-filename=-1920b6d35b25dcfe --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps --extern tracewake_core=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps/libtracewake_core-95b4b25dfac705df.rlib`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name hidden_truth_gates --edition=2021 crates/tracewake-core/tests/hidden_truth_gates.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=6827b5805fd85fab -C extra-filename=-499dcae7fdb8d686 --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps --extern tracewake_core=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps/libtracewake_core-95b4b25dfac705df.rlib`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_content --edition=2021 crates/tracewake-content/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=f1a402c06b6200e9 -C extra-filename=-052d9f0ddd5654e3 --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps --extern tracewake_core=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps/libtracewake_core-95b4b25dfac705df.rmeta`
warning: unused import: `tracewake_core::events::apply::apply_epistemic_event`
 --> crates/tracewake-content/src/load.rs:3:5
  |
3 | use tracewake_core::events::apply::apply_epistemic_event;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `EventStream`
 --> crates/tracewake-content/src/load.rs:6:31
  |
6 |     EventEnvelope, EventKind, EventStream, PayloadField, EVENT_SCHEMA_V1,
  |                               ^^^^^^^^^^^

error[E0277]: the trait bound `EpistemicProjection: Default` is not satisfied
   --> crates/tracewake-content/src/load.rs:159:8
    |
159 |     Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
    |        ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `EpistemicProjection`

For more information about this error, try `rustc --explain E0277`.
warning: `tracewake-content` (lib) generated 2 warnings
error: could not compile `tracewake-content` (lib) due to 1 previous error; 2 warnings emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_content --edition=2021 crates/tracewake-content/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=f1a402c06b6200e9 -C extra-filename=-052d9f0ddd5654e3 --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps --extern tracewake_core=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps/libtracewake_core-95b4b25dfac705df.rmeta` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
warning: `tracewake-content` (lib test) generated 2 warnings (2 duplicates)
error: could not compile `tracewake-content` (lib test) due to 1 previous error; 2 warnings emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_content --edition=2021 crates/tracewake-content/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=d243c079ea17582c -C extra-filename=-b18457137da16d86 --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps --extern tracewake_core=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps/libtracewake_core-95b4b25dfac705df.rlib` (exit status: 1)

*** result: Failure(101)
